# downScaleML

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
Notebooks/: AdaBoost_tasmean.ipynb  Ada_tasmean.ipynb  Bias_Correction_sf_qm.ipynb  CERRA_SEAS5.ipynb  DCEDNS_bias_testing_precipitation.ipynb  DCEDNS_bias_testing_temperature.ipynb  LGBMM_tasmean.ipynb  LGBM_precipi.ipynb  LGBM_tasmean.ipynb  RF_tasmean].ipynb  Test_ensemble_precipi.ipynb  Untitled.ipynb  Untitled1.ipynb  XGBRegression_tasmean.ipynb  XGB_tasmean.ipynb  added_sf_deterministic_metrics_verification-Copy1.ipynb  clustering.ipynb  clustering_adige.ipynb  clustering_adige_final.ipynb  dcedns_temp.ipynb  document_precipit.ipynb  document_temp.ipynb  doy_encoder_testing.ipynb  eval_temperature.ipynb  master_rf.ipynb  optuna_verification_without CV.ipynb  optuna_verification_without_CV_correcting_repeated_values.ipynb  output.csv  pr_optuna_verification_TSSFold_CV_LGBM.ipynb  predictive_skill_temperature.ipynb  rf_bias_testing_precipitation.ipynb  rf_bias_testing_temperature.ipynb  rf_tasmean.ipynb  rf_temp.ipynb  saviour_document.ipynb  saviour_document_precipit.ipynb  saviour_document_temp.ipynb  sf_deterministic_metrics_verification.ipynb  sf_document_temp.ipynb  sf_mean_document_tasmean.ipynb  (+5 more)
Notebooks/Alice_experiment/: BI_precipi.ipynb  BI_precipi_qm.ipynb  BI_with_post.ipynb  BI_without_post.ipynb  LGBM_no_post.ipynb  LGBM_precipi_qm.ipynb  LGBM_with_post.ipynb  QM_on_BI_SFmean_tasmean.ipynb  QM_on_Statistically_Downscaled_on_SFmean.ipynb
Notebooks/Thesis_Results/: Bias_t_sf_deterministic_metrics_verification-Copy1.ipynb  exp_sf_precipitation.ipynb  (+14 more)
downscaleML/: predict_from_models.py
downscaleML.egg-info/: PKG-INFO  SOURCES.txt
scripts/: Untitled.ipynb  base_models.sh  data_download.sh  grid_search.sh  model_search.sh  perform_model_search.sh
util_modules/: automate_precipi.py  cli_download_CERRA.py  combined_preprocess_ERA5_add_tasmin_tasmax.py  dem.nc  download_CERRA.py  feature_importance.py  path_creator.py  preprocess_ERA5.py  preprocess_ERA5_precipi.py  preprocess_dem.py
(+105 files in other folders)
