[tool.poetry]
name = "downscaleml"
version = "1.0"
description = "downScale climate data using ML"
authors = ["Suriyah Dhinakaran <pythonsuriyah@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dask = "2023.3.2"
joblib = "1.2.0"
numpy = "1.24.2"
pandas = "1.5.3"
scikit-learn = "1.2.2"
torch = "2.0.0"
xarray = "2023.3.0"
setuptools = "66.0.0"
xgboost = "1.7.6"
cdo = "1.6.0"
netcdf4 = "1.6.4"
h5netcdf = "1.2.0"
matplotlib = "3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
