[tool.poetry]
name = "downscaleml"
version = "2.0.0"
description = "Climate downscaling component which uses traditional ml models to build robust prediction of climate variables"
authors = ["Suriyah Dhinakaran, Daniel Frisinghelli"]
readme = "README.md"
packages = [{include = "downscaleml"}]

[tool.poetry.dependencies]
python = "3.9.12"
dask = "^2023.8.1"
GDAL = "3.4.3"
joblib = "^1.3.2"
numpy = "^1.25.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
setuptools = "^68.1.2"
torch = "2.0.0"
xarray = "^2023.8.0"
matplotlib = "3.7.1"
xgboost = "^1.7.6"
lightgbm = "^4.0.0"
cdo = "^1.6.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.6.1"
pip = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
